--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div class="inner pb-100 clearfix">
 							<div class="form-content pera-content">
 								<div class="step-inner-content">
-									<span class="step-no">Step 1</span>
+									<span class="step-no">Step 1A</span>
 									<h2>What kind of Services You need?</h2>
 									<p>Tation argumentum et usu, dicit viderer evertitur te has. Eu dictas concludaturque usu, facete detracto patrioque an per, lucilius pertinacia eu vel.</p>
 									<div class="step-box">
