--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<div class="form-content pera-content">
 								<div class="step-inner-content">
 									<span class="step-no">Step 1</span>
-									<h2>What kind of Services You need?</h2>
+									<h2>What kind of Stuff You need?</h2>
 									<p>Tation argumentum et usu, dicit viderer evertitur te has. Eu dictas concludaturque usu, facete detracto patrioque an per, lucilius pertinacia eu vel.</p>
 									<div class="step-box">
 										<div class="row">
